fix mobile layout issues

--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ body{
 #contact img{
     height: 190px;
     width: 190px;
-   
+
 }
 
 footer{
@@ -657,6 +657,69 @@ footer .copyright{
 #pagination a:hover{
     background-color: #063f3b;
 }
+
+
+/* Single Product */
+#prodetails{
+    display: flex;
+    margin-top: 100px;
+   
+}
+#prodetails .single-product-image{
+    width: 40%;
+    margin-right: 50px;
+   
+}
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
+#prodetails .single-pro-details{
+    width: 50%;
+    padding-top:30px ;
+}
+
+#prodetails .single-pro-details h4{
+    padding: 40px 0 20px 0
+}
+
+#prodetails .single-pro-details h2{
+    font-size: 26px;
+}
+#prodetails .single-pro-details select{
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input{
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus{
+    outline: none;
+}
+
+#prodetails .single-pro-details button{
+
+    background-color: #088178;
+    color: white;
+    cursor: pointer;
+}
+#prodetails .single-pro-details span{
+    line-height: 25px;
+}
+
 
 
 
@@ -854,7 +917,23 @@ footer .copyright{
     footer.copyright{
         text-align: start;
     }
-    
+
+    /* single product */
+    #prodetails {
+    display: flex;
+    flex-direction: column;
+    } 
+
+    #prodetails .single-product-image {
+    width: 100%;
+    margin-right: 0px;
+    }
+
+    #prodetails .single-pro-details {
+    width: 100%;
+    padding-top: 30px;
+}
+ 
 
 
 
